(feat): refactors