@@ -4,7 +4,6 @@ import lombok.AllArgsConstructor;
 import lombok.Getter;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -13,12 +12,15 @@ import static mu.server.persistence.enumeration.Permission.ADMIN_CREATE;
 import static mu.server.persistence.enumeration.Permission.ADMIN_DELETE;
 import static mu.server.persistence.enumeration.Permission.ADMIN_READ;
 import static mu.server.persistence.enumeration.Permission.ADMIN_UPDATE;
+import static mu.server.persistence.enumeration.Permission.USER_CREATE;
+import static mu.server.persistence.enumeration.Permission.USER_DELETE;
+import static mu.server.persistence.enumeration.Permission.USER_UPDATE;
 
 @Getter
 @AllArgsConstructor
 public enum Role {
 
-    USER(Collections.emptySet()),
+    USER(Set.of(USER_CREATE, ADMIN_READ, USER_DELETE, USER_UPDATE)),
     ADMIN(Set.of(ADMIN_READ, ADMIN_CREATE, ADMIN_DELETE, ADMIN_UPDATE));
 
     private final Set<Permission> permissions;
